--- a/app/src/main/res/layout/launch_pads_recycler_item.xml
+++ b/app/src/main/res/layout/launch_pads_recycler_item.xml
@@ -137,11 +137,11 @@
 
     <TextView
         android:id="@+id/text_details"
-        android:layout_width="wrap_content"
+        android:layout_width="0dp"
         android:layout_height="wrap_content"
-        android:layout_marginStart="8dp"
+        android:layout_marginStart="16dp"
         android:layout_marginTop="8dp"
-        android:layout_marginEnd="8dp"
+        android:layout_marginEnd="16dp"
         android:layout_marginBottom="8dp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
