Add option in settings to enable/disable upcoming launch notifications

--- a/app/src/main/res/xml/app_preferences.xml
+++ b/app/src/main/res/xml/app_preferences.xml
@@ -20,6 +20,13 @@
                 android:summaryOff="@string/settings_dark_mode_summary_off"
                 android:defaultValue="false"/>
 
+        <SwitchPreference
+            android:key="prefs_notifications_upcoming_launches"
+            android:title="@string/upcoming_launches_notifications"
+            android:summaryOn="@string/notifications_enabled"
+            android:summaryOff="@string/notifications_disabled"
+            android:defaultValue="false"/>
+
     </PreferenceCategory>
 
 </PreferenceScreen>
