--- a/app/src/main/res/layout/fragment_capsule_detail.xml
+++ b/app/src/main/res/layout/fragment_capsule_detail.xml
@@ -1,186 +1,186 @@
 <?xml version="1.0" encoding="utf-8"?>
-<ScrollView
-        xmlns:android="http://schemas.android.com/apk/res/android"
-        xmlns:app="http://schemas.android.com/apk/res-auto"
-        xmlns:tools="http://schemas.android.com/tools"
-        android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        tools:context=".ui.capsules.CapsuleDetailFragment">
+<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
+    xmlns:tools="http://schemas.android.com/tools"
+    android:layout_width="match_parent"
+    android:layout_height="match_parent"
+    tools:context=".ui.capsules.CapsuleDetailFragment">
 
     <androidx.constraintlayout.widget.ConstraintLayout
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content">
+        android:id="@+id/shared_container_end_view"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content">
 
         <ImageView
-                android:id="@+id/image_capsule"
-                android:src="@drawable/detail_fragment_image_capsule_dragon"
-                android:contentDescription="@string/detail_fragment_image_content_desc"
-                android:layout_width="0dp"
-                android:layout_height="150dp"
-                app:layout_constraintStart_toStartOf="parent"
-                app:layout_constraintEnd_toEndOf="parent"
-                app:layout_constraintTop_toTopOf="parent"
-                android:scaleType="centerCrop"/>
+            android:id="@+id/image_capsule"
+            android:layout_width="0dp"
+            android:layout_height="150dp"
+            android:contentDescription="@string/detail_fragment_image_content_desc"
+            android:scaleType="centerCrop"
+            android:src="@drawable/detail_fragment_image_capsule_dragon"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toTopOf="parent" />
 
         <TextView
-                android:text="@string/title_capsule_serial"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:id="@+id/textView13"
-                app:layout_constraintTop_toBottomOf="@+id/image_capsule"
-                android:layout_marginTop="8dp"
-                app:layout_constraintStart_toStartOf="@+id/text_capsule_serial"
-                app:layout_constraintEnd_toEndOf="@+id/text_capsule_serial"/>
+            android:id="@+id/textView13"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginTop="8dp"
+            android:text="@string/title_capsule_serial"
+            app:layout_constraintEnd_toEndOf="@+id/text_capsule_serial"
+            app:layout_constraintStart_toStartOf="@+id/text_capsule_serial"
+            app:layout_constraintTop_toBottomOf="@+id/image_capsule" />
 
         <TextView
-                android:id="@+id/text_capsule_serial"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                tools:text="C102"
-                android:layout_marginStart="8dp"
-                app:layout_constraintStart_toStartOf="parent"
-                android:textAppearance="@style/TextAppearance.MaterialComponents.Headline4"
-                android:layout_marginEnd="8dp"
-                app:layout_constraintEnd_toEndOf="parent"
-                android:layout_marginTop="8dp"
-                app:layout_constraintTop_toBottomOf="@+id/textView13"/>
+            android:id="@+id/text_capsule_serial"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginStart="8dp"
+            android:layout_marginTop="8dp"
+            android:layout_marginEnd="8dp"
+            android:textAppearance="@style/TextAppearance.MaterialComponents.Headline4"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toBottomOf="@+id/textView13"
+            tools:text="C102" />
 
         <TextView
-                android:text="@string/title_type"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:id="@+id/textView10"
-                android:layout_marginTop="16dp"
-                app:layout_constraintTop_toBottomOf="@+id/text_capsule_serial"
-                app:layout_constraintStart_toStartOf="@+id/text_capsule_type"
-                app:layout_constraintEnd_toEndOf="@+id/text_capsule_type"/>
+            android:id="@+id/textView10"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginTop="16dp"
+            android:text="@string/title_type"
+            app:layout_constraintEnd_toEndOf="@+id/text_capsule_type"
+            app:layout_constraintStart_toStartOf="@+id/text_capsule_type"
+            app:layout_constraintTop_toBottomOf="@+id/text_capsule_serial" />
 
         <TextView
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:id="@+id/text_capsule_type"
-                tools:text="Dragon 2.0"
-                android:textAppearance="@style/TextAppearance.MaterialComponents.Headline6"
-                app:layout_constraintStart_toStartOf="parent"
-                app:layout_constraintHorizontal_bias="0.5"
-                app:layout_constraintEnd_toStartOf="@+id/text_capsule_status"
-                android:layout_marginTop="8dp"
-                app:layout_constraintTop_toBottomOf="@+id/textView10"/>
+            android:id="@+id/text_capsule_type"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginTop="8dp"
+            android:textAppearance="@style/TextAppearance.MaterialComponents.Headline6"
+            app:layout_constraintEnd_toStartOf="@+id/text_capsule_status"
+            app:layout_constraintHorizontal_bias="0.5"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toBottomOf="@+id/textView10"
+            tools:text="Dragon 2.0" />
 
         <TextView
-                android:text="@string/title_status"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:id="@+id/textView11"
-                app:layout_constraintTop_toTopOf="@+id/textView10"
-                app:layout_constraintStart_toStartOf="@+id/text_capsule_status"
-                app:layout_constraintEnd_toEndOf="@+id/text_capsule_status"/>
+            android:id="@+id/textView11"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="@string/title_status"
+            app:layout_constraintEnd_toEndOf="@+id/text_capsule_status"
+            app:layout_constraintStart_toStartOf="@+id/text_capsule_status"
+            app:layout_constraintTop_toTopOf="@+id/textView10" />
 
         <TextView
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:id="@+id/text_capsule_status"
-                app:layout_constraintTop_toTopOf="@+id/text_capsule_type"
-                app:layout_constraintStart_toEndOf="@+id/text_capsule_type"
-                app:layout_constraintHorizontal_bias="0.5"
-                app:layout_constraintEnd_toEndOf="parent"
-                android:textAppearance="@style/TextAppearance.MaterialComponents.Headline6"
-                android:textAllCaps="true"
-                tools:text="ACTIVE"/>
+            android:id="@+id/text_capsule_status"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:textAllCaps="true"
+            android:textAppearance="@style/TextAppearance.MaterialComponents.Headline6"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintHorizontal_bias="0.5"
+            app:layout_constraintStart_toEndOf="@+id/text_capsule_type"
+            app:layout_constraintTop_toTopOf="@+id/text_capsule_type"
+            tools:text="ACTIVE" />
 
         <TextView
-                android:text="@string/title_original_launch_utc_time"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:id="@+id/textView14"
-                android:layout_marginTop="16dp"
-                app:layout_constraintTop_toBottomOf="@+id/text_capsule_type"
-                app:layout_constraintStart_toStartOf="parent"
-                android:layout_marginStart="8dp"
-                app:layout_constraintEnd_toEndOf="parent"
-                android:layout_marginEnd="8dp"/>
+            android:id="@+id/textView14"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginStart="8dp"
+            android:layout_marginTop="16dp"
+            android:layout_marginEnd="8dp"
+            android:text="@string/title_original_launch_utc_time"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toBottomOf="@+id/text_capsule_type" />
 
         <TextView
-                android:id="@+id/text_capsule_launch"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:textAppearance="@style/TextAppearance.MaterialComponents.Headline6"
-                android:layout_marginTop="8dp"
-                app:layout_constraintTop_toBottomOf="@+id/textView14"
-                app:layout_constraintStart_toStartOf="parent"
-                android:layout_marginStart="8dp"
-                app:layout_constraintEnd_toEndOf="parent"
-                android:layout_marginEnd="8dp"
-                tools:text="2016-02-19"/>
+            android:id="@+id/text_capsule_launch"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginStart="8dp"
+            android:layout_marginTop="8dp"
+            android:layout_marginEnd="8dp"
+            android:textAppearance="@style/TextAppearance.MaterialComponents.Headline6"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toBottomOf="@+id/textView14"
+            tools:text="2016-02-19" />
 
         <TextView
-                android:id="@+id/textView12"
-                android:text="@string/title_details"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_marginEnd="8dp"
-                app:layout_constraintEnd_toEndOf="parent"
-                android:layout_marginStart="8dp"
-                app:layout_constraintStart_toStartOf="parent"
-                android:layout_marginTop="16dp"
-                app:layout_constraintTop_toBottomOf="@+id/text_capsule_launch"/>
+            android:id="@+id/textView12"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginStart="8dp"
+            android:layout_marginTop="16dp"
+            android:layout_marginEnd="8dp"
+            android:text="@string/title_details"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toBottomOf="@+id/text_capsule_launch" />
 
         <TextView
-                android:layout_width="0dp"
-                android:layout_height="wrap_content"
-                android:id="@+id/text_capsule_details"
-                android:textAlignment="center"
-                android:textAppearance="@style/TextAppearance.MaterialComponents.Headline6"
-                app:layout_constraintStart_toStartOf="parent"
-                android:layout_marginStart="8dp"
-                app:layout_constraintEnd_toEndOf="parent"
-                android:layout_marginEnd="8dp"
-                tools:text='"Rumored to be used for Inflight Abort Test after DM-1"'
-                app:layout_constraintHorizontal_bias="0.0"
-                android:layout_marginTop="8dp"
-                app:layout_constraintTop_toBottomOf="@+id/textView12"/>
+            android:id="@+id/text_capsule_details"
+            android:layout_width="0dp"
+            android:layout_height="wrap_content"
+            android:layout_marginStart="8dp"
+            android:layout_marginTop="8dp"
+            android:layout_marginEnd="8dp"
+            android:textAlignment="center"
+            android:textAppearance="@style/TextAppearance.MaterialComponents.Headline6"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintHorizontal_bias="0.0"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toBottomOf="@+id/textView12"
+            tools:text='"Rumored to be used for Inflight Abort Test after DM-1"' />
 
         <TextView
-                android:text="@string/title_landings"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:id="@+id/textView3"
-                app:layout_constraintStart_toStartOf="parent"
-                app:layout_constraintHorizontal_bias="0.5"
-                app:layout_constraintEnd_toStartOf="@+id/text_capsule_landings"
-                android:layout_marginTop="16dp"
-                app:layout_constraintTop_toBottomOf="@+id/text_capsule_details"/>
+            android:id="@+id/textView3"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginTop="16dp"
+            android:text="@string/title_landings"
+            app:layout_constraintEnd_toStartOf="@+id/text_capsule_landings"
+            app:layout_constraintHorizontal_bias="0.5"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toBottomOf="@+id/text_capsule_details" />
 
         <TextView
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:id="@+id/text_capsule_landings"
-                app:layout_constraintTop_toTopOf="@+id/textView3"
-                app:layout_constraintStart_toEndOf="@+id/textView3"
-                app:layout_constraintHorizontal_bias="0.5"
-                app:layout_constraintEnd_toEndOf="parent"
-                android:text="@string/empty_content_sign"
-                tools:text="0"/>
+            android:id="@+id/text_capsule_landings"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="@string/empty_content_sign"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintHorizontal_bias="0.5"
+            app:layout_constraintStart_toEndOf="@+id/textView3"
+            app:layout_constraintTop_toTopOf="@+id/textView3"
+            tools:text="0" />
 
         <TextView
-                android:text="@string/title_reused"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:id="@+id/textView5"
-                android:layout_marginTop="8dp"
-                app:layout_constraintTop_toBottomOf="@+id/textView3"
-                app:layout_constraintStart_toStartOf="@+id/textView3"
-                app:layout_constraintBottom_toBottomOf="parent"
-                android:layout_marginBottom="8dp"/>
+            android:id="@+id/textView5"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginTop="8dp"
+            android:layout_marginBottom="8dp"
+            android:text="@string/title_reused"
+            app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintStart_toStartOf="@+id/textView3"
+            app:layout_constraintTop_toBottomOf="@+id/textView3" />
 
         <TextView
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:id="@+id/text_capsule_reused"
-                app:layout_constraintTop_toTopOf="@+id/textView5"
-                app:layout_constraintEnd_toEndOf="@+id/text_capsule_landings"
-                android:text="@string/empty_content_sign"
-                tools:text="0"/>
+            android:id="@+id/text_capsule_reused"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="@string/empty_content_sign"
+            app:layout_constraintEnd_toEndOf="@+id/text_capsule_landings"
+            app:layout_constraintTop_toTopOf="@+id/textView5"
+            tools:text="0" />
 
     </androidx.constraintlayout.widget.ConstraintLayout>
 </ScrollView>
