Simplified some code

--- a/app/src/main/res/layout/fragment_recycler_sorting.xml
+++ b/app/src/main/res/layout/fragment_recycler_sorting.xml
@@ -34,7 +34,8 @@
                 <androidx.recyclerview.widget.RecyclerView
                     android:id="@+id/recyclerView"
                     android:layout_width="match_parent"
-                    android:layout_height="match_parent" />
+                    android:layout_height="match_parent"
+                    app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager" />
 
                 <LinearLayout
                     android:id="@+id/empty_state"
